<resources>
    <string name="app_name">케미</string>
    <string name="bottom_navigation_title1">홈</string>
    <string name="bottom_navigation_title2">카테고리</string>
    <string name="bottom_navigation_title3">스토리</string>
    <string name="bottom_navigation_title4">성분사전</string>
    <string name="bottom_navigation_title5">마이케미</string>
    <string name="bottom_navigation_shifting_mode">mShiftingMode</string>
    <string name="menu_toolbar_product_action_faq">자주묻는질문</string>
    <string name="menu_toolbar_product_action_archive">제품보관</string>
    <string name="menu_toolbar_product_action_share">제품공유</string>
    <string name="menu_toolbar_content_action_like">컨텐츠좋아요</string>
    <string name="menu_toolbar_content_action_archive">컨텐츠보관</string>
    <string name="menu_toolbar_content_action_share">컨텐츠공유</string>
    <string name="menu_toolbar_member_action_config">사용자 설정</string>
    <string name="search_guide_sentence">상품, 브랜드의 초성으로 검색해보세요!</string>
    <string name="search_edit_text">search_edit_text</string>
    <string name="search_image_button">search_image_button</string>
    <string name="search_view">search_edit_text_view</string>
    <string name="search_popular_fragment_title">인기검색어</string>
    <string name="search_latest_fragment_title">최근검색어</string>
    <string name="list_item_latest_search_delete">해당 최근 검색어 삭제</string>
    <string name="latest_search_delete">최근 검색어 전체 삭제</string>
    <string name="empty_latest_search_info">보관된 최근 검색어가 없습니다.</string>
    <string name="latest_search_all_delete">전체 기록 삭제</string>
    <string name="product_sort_accuracy">정확도 순</string>
    <string name="product_sort_rating_value">평점 순</string>
    <string name="product_sort_rating_count">리뷰 순</string>
    <string name="product_total_count">검색 결과 %s 개</string>
    <string name="chemical_chart_title_format">총 %s개의 성분 중</string>
    <string name="chemical_chart_description">* 그래프는 전체 성분 갯수에 대한 비율을 나타냈어요.</string>
    <string name="chemical_sort_description">* 전체성분 함유량 순으로 정렬되어있어요.</string>
    <string name="chemical_ewg_info_description"><u>* EWG 안전도 등급이란?</u></string>
    <string name="chemical_ewg_value_name_1">등급\n미정</string>
    <string name="chemical_ewg_value_name_2">낮은\n위험도</string>
    <string name="chemical_ewg_value_name_3">중간\n위험도</string>
    <string name="chemical_ewg_value_name_4">높은\n위험도</string>
    <string name="product_material_info_prefix_format">- %s</string>
    <string name="product_list_result_paginating_message">검색된 제품이 더 있어요!\n스크롤을 조금 더 올려주세요.</string>
    <string name="product_list_result_empty_request_promote_message">검색어에 대한 검색을 마쳤어요!\n찾고 계신 제품이 없다면</string>
    <string name="product_review_count">(%s명)</string>
    <string name="review_count_format">%s건</string>
    <string name="product_detail_tab_title1">전체 성분</string>
    <string name="product_detail_tab_title2">제품 정보 및 리뷰</string>
    <string name="product_detail_tab_title2_description">\u0020(%s건)</string>
    <string name="total_count_format">%s개</string>
    <string name="chemical_whole_true_message">전성분</string>
    <string name="chemical_whole_false_message">주성분</string>
    <string name="chemical_list_sort_hazard">위험도 순</string>
    <string name="chemical_list_sort_notation">제품표기순</string>
    <string name="chemical_dialog_name_eng_format">[%s]</string>
    <string name="chemical_dialog_allergy_false">\"알레르기 과민성이 없다고 해요\"</string>
    <string name="chemical_dialog_allergy_true">\"알레르기 과민성이 있어요\"</string>
    <string name="list_item_tag_popular_update_date">업데이트 시간 : %s</string>
    <string name="member_start_naver">네이버 아이디로 시작하기</string>
    <string name="member_start_google">구글 아이디로 시작하기</string>
    <string name="member_start_local">이메일로 시작하기</string>
    <string name="member_start_browse"><u>둘러보기</u></string>
    <string name="member_start_already_user"><u>이미 가입하셨나요?</u></string>
    <string name="member_start_app_info">일상 속 화학제품 안전성 알리미 케미</string>
    <string name="member_start_local_agree_info">케미 서비스의 <u><b>이용약관 및 개인정보 취급방침</b></u>의\n내용을 확인하였으며, 해당 내용에 동의합니다.</string>
    <string name="member_start_info_info_message">부가 정보를 입력하면 나에게 맞는\n화학성분 제품을 찾기 쉬워요!</string>
    <string name="loading">Loading…</string>
    <string name="progress_dialog_title_product_list">알맞은 상품을 검색 중입니다.</string>
    <string name="progress_dialog_title_product_list_next">알맞은 상품을 조금 더 가져오는 중입니다.</string>
    <string name="progress_dialog_message_wait">잠시만 기다려 주세요.</string>
    <string name="progress_dialog_message_error">일시적인 연결장애가 발생했어요. 다시 시도해주세요.</string>
    <string name="progress_dialog_title_product">상품의 정보를 가져오고 있습니다.</string>
    <string name="progress_dialog_title_chemical">성분의 정보를 가져오고 있습니다.</string>
    <string-array name="kind_of_product_sort_array">
        <item>@string/product_sort_accuracy</item>
        <item>@string/product_sort_rating_value</item>
        <item>@string/product_sort_rating_count</item>
    </string-array>
    <string name="email_validation_message_wrong_pattern">올바르지 않은 이메일 형식 이에요.</string>
    <string name="email_validation_message_already_user">이미 사용하고 있는 이메일 이에요.</string>
    <string name="email_validation_message_auth">멋진 이메일 이네요! 중복 확인 후 메일을 발송해드릴께요.</string>
    <string name="email_submit_message_correct">중복 확인 후 이메일이 발송 되었어요. 메일함으로 이동해서 인증을 부탁드려요!</string>
    <string name="email_submit_message_incorrect">이미 가입된 이메일 입니다. 메일을 다시 입력해주세요.</string>
    <string name="email_validation_message_correct">멋진 이메일 이네요! 메일 인증이 완료 되었어요.</string>
    <string name="name_validation_message_short">사용자 이름이 너무 짧아요.</string>
    <string name="name_validation_message_long">사용자 이름이 너무 길어요.</string>
    <string name="name_validation_message_incorrect">올바르지 않은 이름이에요.</string>
    <string name="name_validation_message_correct">멋진 이름 이네요!</string>
    <string name="name_submit_message_incorrect">사용 중인 닉네임 입니다. 닉네임을 다시 입력해주세요.</string>
    <string name="password_validation_message_short">비밀번호가 너무 짧아요.</string>
    <string name="password_validation_message_long">비밀번호가 너무 길어요.</string>
    <string name="confirm_validation_message_incorrect">비밀번호가 일치하지 않아요.</string>
    <string name="confirm_validation_message_correct">비밀번호가 일치하네요!</string>
    <string-array name="validation_message_array">
        <item>@string/email_validation_message_wrong_pattern</item>
        <item>@string/email_validation_message_already_user</item>
        <item>@string/email_validation_message_auth</item>
        <item>@string/name_validation_message_short</item>
        <item>@string/name_validation_message_long</item>
        <item>@string/name_validation_message_incorrect</item>
        <item>@string/name_validation_message_correct</item>
        <item>@string/password_validation_message_short</item>
        <item>@string/password_validation_message_long</item>
        <item>@string/confirm_validation_message_incorrect</item>
        <item>@string/confirm_validation_message_correct</item>
    </string-array>
    <string name="survey_year_format">%s년</string>
    <string name="survey_info_progress_stage_format">%1$s단계 중 %2$s단계</string>
    <string name="review_rating_0_message">최악이에요!</string>
    <string name="review_rating_0.5_message">다시 사고 싶지 않아요</string>
    <string name="review_rating_1_message">전혀 좋지 않아요</string>
    <string name="review_rating_1.5_message">별로 좋지 않아요</string>
    <string name="review_rating_2_message">좋은지 잘 모르겠어요</string>
    <string name="review_rating_2.5_message">보통이에요</string>
    <string name="review_rating_3_message">그냥 쓸 만해요</string>
    <string name="review_rating_3.5_message">그럭저럭 좋아요</string>
    <string name="review_rating_4_message">만족스러워요</string>
    <string name="review_rating_4.5_message">또 살 거예요</string>
    <string name="review_rating_5_message">최고예요!</string>
    <string-array name="review_rating_message_array">
        <item>@string/review_rating_0_message</item>
        <item>@string/review_rating_0.5_message</item>
        <item>@string/review_rating_1_message</item>
        <item>@string/review_rating_1.5_message</item>
        <item>@string/review_rating_2_message</item>
        <item>@string/review_rating_2.5_message</item>
        <item>@string/review_rating_3_message</item>
        <item>@string/review_rating_3.5_message</item>
        <item>@string/review_rating_4_message</item>
        <item>@string/review_rating_4.5_message</item>
        <item>@string/review_rating_5_message</item>
    </string-array>
    <string name="bottom_sheet_menu_default_image">기본이미지</string>
    <string name="bottom_sheet_menu_camera">카메라</string>
    <string name="bottom_sheet_menu_gallery">갤러리</string>
    <string name="bottom_sheet_menu_image_pick">이미지 다시 선택하기</string>
    <string name="bottom_sheet_menu_image_delete">이미지 선택 취소하기</string>
    <string name="bottom_sheet_menu_comment_comment">답글쓰기</string>
    <string name="bottom_sheet_menu_comment_edit">수정</string>
    <string name="bottom_sheet_menu_comment_delete">삭제</string>
    <string name="review_create_review_hint">이 제품이 좋은 이유와 아쉬운 점이 있다면 무엇인지 다른 사람들에게 알려주세요. (최소 15자)</string>
    <string name="review_create_review_length_format">%s자</string>
    <string name="member_send_email_format">%s 으로</string>
    <string name="ewg_reason_description_null">EWG 미등록 성분</string>
    <string name="ewg_reason_description_none">등급판정 근거가 없어요</string>
    <string name="ewg_reason_description_limited">등급판정 근거가 미약해요</string>
    <string name="ewg_reason_description_fair">등급판정 근거가 타당해요</string>
    <string name="ewg_reason_description_good">등급판정 근거가 많아요</string>
    <string name="ewg_reason_description_robust">등급판정 근거가 강력해요</string>
    <string-array name="ewg_reason_description_array">
        <item>@string/ewg_reason_description_null</item>
        <item>@string/ewg_reason_description_none</item>
        <item>@string/ewg_reason_description_limited</item>
        <item>@string/ewg_reason_description_fair</item>
        <item>@string/ewg_reason_description_good</item>
        <item>@string/ewg_reason_description_robust</item>
    </string-array>
    <string name="search_chemical_latest_title">최근 검색 성분</string>
    <string name="search_chemical_latest_message">\"최근 검색한 성분이 없어요.\"</string>
    <string name="search_chemical_suggestion_title">검색어 제안</string>
    <string name="search_chemical_suggestion_message">\"찾으시는 성분이 이 성분일 것 같아요.\"</string>
    <string name="search_chemical_result_empty_message">\"검색한 성분이 없어요.\"</string>
    <string name="search_chemical_result_title">검색결과 : </string>
    <string name="search_chemical_result_message">\"%1$s\"의 검색결과는 총 %2$s건 이예요.</string>
    <string name="partner_information_message">함께 만들어가는 케미!\n제휴를 원하시는 경우, 아래의 주소로 연락주세요</string>
    <string name="login_button_title">로그인</string>
    <string name="login_info_message">로그인 해야 사용하실 수 있어요.\n 로그인 하시겠어요?</string>
    <string name="logout_button_title">로그아웃</string>
    <string name="logout_info_message">로그아웃 하시겠어요?</string>
    <string name="withdraw_button_title">회원탈퇴</string>
    <string name="withdraw_info_message">회원탈퇴를 하시겠어요?</string>
    <string name="revoke_button_title">연동해제</string>
    <string name="revoke_info_message">연동해제 하시겠어요?</string>
    <string name="promote_extra_info_title">지금하기</string>
    <string name="promote_extra_info_message">추가정보를 입력해야 리뷰를 작성하실 수 있어요.</string>
    <string name="search_clear_info_message">최근 검색어를 모두\n삭제하시겠어요?</string>
    <string name="search_clear_button_title">삭제</string>
    <string name="member_profile_archive_product_title">%s님이 관심있는 제품</string>
    <string name="member_profile_archive_content_title">%s님이 관심있는 컨텐츠</string>
    <string name="member_profile_archive_review_product_title">%s님이 리뷰를 작성한 제품</string>
    <string name="administrator_support_email">help@chemi.io</string>
    <string name="partner_email_title">메일 보내기</string>
    <string name="partner_email_subject">케미와 제휴를 맺고 싶습니다.</string>
    <string name="partner_email_description">케미에 대한 관심에 감사드립니다.\n제안배경과 제안내용을 자유로운 형식으로 보내주세요.\n업체명, 담당자 명, 연락처를 남겨주셔야 회신을 받으실 수 있습니다.</string>
    <string name="request_product_title">이메일로 제품 분석 요청하기</string>
</resources>