<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:title="@string/bottom_navigation_title1"
        android:icon="@drawable/ic_menu_search" />
    <item
        android:id="@+id/action_category"
        android:title="@string/bottom_navigation_title2"
        android:icon="@drawable/ic_menu_category" />
    <item
        android:id="@+id/action_content"
        android:title="@string/bottom_navigation_title3"
        android:icon="@drawable/ic_menu_contents" />
    <item
        android:id="@+id/action_dictionary"
        android:title="@string/bottom_navigation_title4"
        android:icon="@drawable/ic_menu_dictionary" />
    <item
        android:id="@+id/action_member"
        android:title="@string/bottom_navigation_title5"
        android:icon="@drawable/ic_menu_user" />
</menu>