<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_content_like"
        android:icon="@drawable/ic_like_false"
        android:title="@string/menu_toolbar_content_action_like"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_content_archive"
        android:icon="@drawable/ic_archive_false"
        android:title="@string/menu_toolbar_content_action_archive"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_content_share"
        android:icon="@drawable/ic_share_true"
        android:title="@string/menu_toolbar_content_action_share"
        android:orderInCategory="100"
        app:showAsAction="always" />

</menu>