<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_product_faq"
        android:icon="@drawable/ic_toolbar_question_true"
        android:title="@string/menu_toolbar_product_action_faq"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_product_archive"
        android:icon="@drawable/ic_toolbar_archive_true"
        android:title="@string/menu_toolbar_product_action_archive"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_product_share"
        android:icon="@drawable/ic_toolbar_share_true"
        android:title="@string/menu_toolbar_product_action_share"
        android:orderInCategory="100"
        app:showAsAction="always" />

</menu>