<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="128dp"
        android:gravity="center_horizontal">
        
        <ImageView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/white_logo"
            android:scaleType="centerCrop"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_start_app_info"
            android:textAppearance="@style/MemberStartTextAppearance"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="47dp"
        android:paddingEnd="47dp"
        android:layout_alignParentBottom="true">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/member_start_naver"
            android:textAppearance="@style/MemberStartTextAppearance"
            android:background="@drawable/widget_border_oval_rectangle_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/member_start_google"
            android:textAppearance="@style/MemberStartTextAppearance"
            android:background="@drawable/widget_border_oval_rectangle_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/member_start_local"
            android:textAppearance="@style/MemberStartTextAppearance"
            android:background="@drawable/widget_border_oval_rectangle_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:gravity="center_horizontal"
            android:text="@string/member_start_browse"
            android:textAppearance="@style/MemberStartTextAppearance"/>

    </LinearLayout>

</RelativeLayout>