<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/search_view"
        android:transitionName="@string/search_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_editText_height"
        android:background="@color/colorWhite"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">
        <!--android:layout_margin="8dp"-->

        <EditText
            android:id="@+id/search_edit_text"
            android:transitionName="@string/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:hint="@string/search_guide_sentence"
            android:textSize="15sp"
            android:textColorHint="@color/colorFontHint" />

        <ImageButton
            android:id="@+id/search_image_button"
            android:transitionName="@string/search_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_search_primary_24dp"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TabLayout
            android:id="@+id/search_tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.5dp"
            android:background="@color/colorWhite"
            app:tabTextAppearance="@style/SearchTabLayoutTextStyle"
            app:tabTextColor="@color/colorFontHint"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabIndicatorColor="@color/colorPrimary"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:tabGravity="fill"
            app:tabMode="fixed">

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/search_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

    </LinearLayout>

</LinearLayout>